# fast-tts-cli

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  README_python.md  SECURITY.md
.cursor/rules/: rust-cli-excellence.md
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: auto-merge.yml  ci.yml  coderabbit.yml  pr.yml  release-drafter.yml  release.yml
src/: main.rs
tests/: bulk.rs  cli.rs  http_integration.rs
