[package]
name = "fast-tts-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hongkongkiwi/fast-tts-cli"
homepage = "https://github.com/hongkongkiwi/fast-tts-cli"
description = "Fast CLI for Google Cloud Text-to-Speech with bulk config and multi-provider scaffold"
keywords = ["tts", "google", "cli", "audio", "wav"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
base64 = "0.22"
jsonwebtoken = "9"
dirs = "6"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
httpmock = "0.7"
tempfile = "3.10"
pretty_assertions = "1.4"
